# rikard-haskell

./: README.md  build.sh  linux_install.txt  nginx-site  rikard.conf  rikardru-corp.cabal  run.sh  runupdategis.bat  stack-linux.yaml  stack.yaml  update-news.bat  update-news.sh  update-twitter.sh
app-format-news/: Main.hs
app-migrate-articles/: Main.hs
app-migrate-geo/: Main.hs
app-migrate-news/: Main.hs
app-rikardru-corp/: Main.hs
app-rikardru-corp-cgi/: Main.hs
app-update-adverts/: Main.hs
app-update-news/: Main.hs
app-update-twitter/: Main.hs
data/: ao-geo.json  mkad-geo.json  mo-geo.json  sadovoe-geo.json  stop_keywords.txt  stop_words_ru.txt  ttk-geo.json
embed/: robots.txt
inc_libs/libmysql/include/: my_config.h  my_dir.h  my_global.h
inc_libs/libmysql/include/mysql/psi/: mysql_thread.h
mysql-0.1.1.8/: Setup.lhs  mysql.cabal  stack.yaml
mysql-0.1.1.8/Database/MySQL/Base/: C.hsc
pcre-light-0.4.0.4/: pcre-light.cabal  stack.yaml
regex-pcre-builtin-0.94.4.8.8.35/: regex-pcre-builtin.cabal
src/RikardCorp/: DBConnection.hs  DBEnum.hs  DBTypes.hs  Foundation.hs  Init.hs  Static.hs  Types.hs  Widgets.hs
src/RikardCorp/Handlers/: Additions.hs  Articles.hs  Contacts.hs  Favicon.hs  Fraud.hs  Index.hs  Letter.hs  Main.hs  News.hs  Robots.hs
src/RikardCorp/Helpers/: DateTime.hs  Email.hs  Exceptions.hs  Geo.hs  Html.hs  IO.hs  Json.hs  Networking.hs  Sql.hs  SqlTags.hs  Text.hs
src/RikardCorp/Helpers/Internal/: Articles.hs  News.hs
src/RikardCorp/Helpers/NLP/: Text.hs
src/RikardCorp/Helpers/Text/: Textile.hs
static/: custom.css
static/bootstrap3/css/: bootstrap.min.css
static/bootstrap3/js/: bootstrap.min.js
tst/: tst1.hs  tst2.hs  tst3.hs
www-php/text2png/: image.php
www-php/text2png/GDText/: Box.php
